# Multimodal-approach-for-AD

./: .gitignore  AAL2_Atlas_Labels.csv  CITATION.cff  Dataset_MRI.ipynb  Dataset_PET.ipynb  Heatmaps.ipynb  LICENSE  README.md  Training.ipynb  exploration.ipynb  pyproject.toml
images/: 3D Brain Plot.ipynb  pyproject.toml
